--- a/tests/Repo.Tests/App.config
+++ b/tests/Repo.Tests/App.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.7.0.0" newVersion="3.7.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
         <Paket>True</Paket>
         <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.0.1.0" />
