Updated dependencies and lock file

--- a/src/WPF_Editor/WPF_Editor.csproj
+++ b/src/WPF_Editor/WPF_Editor.csproj
@@ -193,6 +193,9 @@
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.5.2'">
       <ItemGroup>
+        <Reference Include="Quickgraph">
+          <Paket>True</Paket>
+        </Reference>
         <Reference Include="GraphX.PCL.Common">
           <HintPath>..\..\packages\GraphX\lib\net40-client\GraphX.PCL.Common.dll</HintPath>
           <Private>True</Private>
